fix: hr margin issue on gap containers

--- a/src/components/_table.scss
+++ b/src/components/_table.scss
@@ -120,10 +120,7 @@ table.x-table {
 			}
 		}
 		thead tr:not(:first-child):after {
-			background-image: var(
-				--rbg,
-				url("#{$ruleSvgPathX}#{str-replace(#{$dark}, '#')}' opacity='0.7#{$ruleSvgPathEnd}")
-			);
+			background-image: url("#{$ruleSvgPathX}#{str-replace(#{$dark}, '#')}' opacity='0.7#{$ruleSvgPathEnd}");
 		}
 	}
 
@@ -147,10 +144,7 @@ table.x-table {
 			}
 		}
 		thead tr:not(:first-child):after {
-			background-image: var(
-				--rbg,
-				url("#{$ruleSvgPathX}#{str-replace(#{$primaryAlt}, '#')}#{$ruleSvgPathEnd}")
-			);
+			background-image: url("#{$ruleSvgPathX}#{str-replace(#{$primaryAlt}, '#')}#{$ruleSvgPathEnd}");
 		}
 	}
 
@@ -174,10 +168,7 @@ table.x-table {
 			}
 		}
 		thead tr:not(:first-child):after {
-			background-image: var(
-				--rbg,
-				url("#{$ruleSvgPathX}#{str-replace(#{$primary}, '#')}#{$ruleSvgPathEnd}")
-			);
+			background-image: url("#{$ruleSvgPathX}#{str-replace(#{$primary}, '#')}#{$ruleSvgPathEnd}");
 		}
 	}
 
@@ -201,10 +192,7 @@ table.x-table {
 			}
 		}
 		thead tr:not(:first-child):after {
-			background-image: var(
-				--rbg,
-				url("#{$ruleSvgPathX}#{str-replace(#{$danger}, '#')}#{$ruleSvgPathEnd}")
-			);
+			background-image: url("#{$ruleSvgPathX}#{str-replace(#{$danger}, '#')}#{$ruleSvgPathEnd}");
 		}
 	}
 
@@ -228,10 +216,7 @@ table.x-table {
 			}
 		}
 		thead tr:not(:first-child):after {
-			background-image: var(
-				--rbg,
-				url("#{$ruleSvgPathX}#{str-replace(#{$success}, '#')}#{$ruleSvgPathEnd}")
-			);
+			background-image: url("#{$ruleSvgPathX}#{str-replace(#{$success}, '#')}#{$ruleSvgPathEnd}");
 		}
 	}
 
@@ -256,10 +241,7 @@ table.x-table {
 			}
 		}
 		thead tr:not(:first-child):after {
-			background-image: var(
-				--rbg,
-				url("#{$ruleSvgPathX}#{str-replace(#{$secondary}, '#')}#{$ruleSvgPathEnd}")
-			);
+			background-image: url("#{$ruleSvgPathX}#{str-replace(#{$secondary}, '#')}#{$ruleSvgPathEnd}");
 		}
 	}
 
